Closed Bug 1125201 Opened 10 years ago Closed 10 years ago

forceRedraw has been made into a no-op and can't therefore throw any more

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38

People

(Reporter: longsonr, Assigned: longsonr)

References

Details

Attachments

(1 file)

No description provided.
Attached patch nothrow.txtSplinter Review
Assignee: nobody → longsonr
Attachment #8553797 - Flags: review?(bzbarsky)
Depends on: 733764
Comment on attachment 8553797 [details] [diff] [review] nothrow.txt r=me. Want to also flag it as [DependsOn=Nothing,Affects=Nothing] so if it's in a tight jitted loop the JIT will just kill it off?
Attachment #8553797 - Flags: review?(bzbarsky) → review+
Flags: in-testsuite-
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: