Bug 1125201 - Make forceRedraw nothrow. r=bzbarsky